<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shareScheduleRegistrationPage"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstNameField"
            android:inputType="text"
            android:padding="25dp" />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastNameField"
            android:inputType="text"
            android:padding="25dp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailField"
            android:inputType="textEmailAddress"
            android:padding="25dp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordField"
            android:inputType="textPassword"
            android:padding="25dp" />

        <EditText
            android:id="@+id/dateOfBirthField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateOfBirthField"
            android:inputType="date"
            android:clickable="true"
            android:padding="25dp"
            android:focusable="true" />

        <Button
            android:id="@+id/register_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:text="@string/submit_button" />


    </LinearLayout>

</LinearLayout>