<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".AddEventActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/event"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title"
            android:inputType="text"
            android:padding="25dp" />

        <EditText
            android:id="@+id/eventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"
            android:clickable="true"
            android:padding="25dp"
            android:focusable="true" />

        <EditText
            android:id="@+id/eventComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_comments"
            android:inputType="text"
            android:padding="25dp" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:text="@string/submit_button" />


    </LinearLayout>

</LinearLayout>